// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionCellRenderer test match last snapshot 1`] = `
<WithTheme(BasicButton)
  buttonType="error"
  className="xsmall"
  disabled={false}
  onClick={[Function]}
>
  action me
</WithTheme(BasicButton)>
`;

exports[`ActionCellRenderer test match snapshot with default properties 1`] = `
<WithTheme(BasicButton)
  buttonType="error"
  className="xsmall"
  disabled={false}
  onClick={[Function]}
/>
`;
